--- a/channel/http/templates/index.html
+++ b/channel/http/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- Title -->
-    <title>ChatGPT</title><!-- Bootstrap Css -->
+    <title>CjS-ChatGPTbot</title><!-- Bootstrap Css -->
     <link href="./static/1.css" rel="stylesheet" />
     <style>
         button {
@@ -154,6 +154,9 @@
             var b = a("#chat").convform()
         });
     </script>
+    <p style="font-family:arial;color:rgb(87, 85, 90);font-size:12px;">CjS-ChatGPTbot-Ver1.0
+    <br>--by Cj Stephen Zhou <a style="font-family:arial;color:rgba(9, 31, 225, 0.851);font-size:12px;">cjszhou@outlook.com</a>
+    </p>
 </body>
 
 </html>
