--- a/channel/http/templates/login.html
+++ b/channel/http/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- Title -->
-    <title>登录</title><!-- Bootstrap Css -->
+    <title>Login-CjS-ChatGPTbot</title><!-- Bootstrap Css -->
     <style>
         .login-form {
             box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.5);
@@ -37,6 +37,9 @@
 </head>
 
 <body class="">
+    <link href="./static/1.css" rel="stylesheet" />
+    <h1 style="font-family:arial;color:rgb(55, 134, 214);font-size:16px;"> <br><br><br><br><br><center> Welcome to CjS-ChatGPTbot ! </center></h1>
+    <p style="font-family:arial;color:rgb(87, 85, 90);font-size:16px;"><center>--by Cj Stephen Zhou <a style="font-family:arial;color:rgba(9, 31, 225, 0.851);font-size:12px;">cjszhou@outlook.com</a></center></p>
     <form name="login" class="login-form" action="./login" method="post" autocomplete="off">
         <input type="password" name="password" placeholder="Password" style="border: none; height: 25px;width: 250px;"
             required>
