setting in English

--- a/channel/http/templates/index.html
+++ b/channel/http/templates/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="drawer">
             <div class="drawer-header">
-                <h2>设置</h2>
+                <h2>Settings 设置</h2>
                 <button id="close-drawer">X</button>
             </div>
             <div class="drawer-content">
@@ -36,15 +36,15 @@
                     <label for="italic">Italic</label>
                 </div>
                 <div>
-                    <label for="backgroundColor">背景颜色:</label>
+                    <label for="backgroundColor">Background Color 背景颜色:</label>
                     <input type="color" id="backgroundColor" name="backgroundColor" value="#ffffff">
                 </div>
                 <div>
-                    <p>AI回复方式：</p>
+                    <p>AI Reply style 回复方式：</p>
                     <input type="radio" id="option1" name="conversationType" class="option-input radio" value=1 checked>
-                    <label for="option1">一次性发送</label>
+                    <label for="option1">Reply all in one 一次性发送</label>
                     <input type="radio" id="option2" name="conversationType" class="option-input radio" value=2>
-                    <label for="option2">逐段发送</label>
+                    <label for="option2">Reply one by one 逐段发送</label>
                 </div>
             </div>
         </div>
