--- a/channel/http/templates/login.html
+++ b/channel/http/templates/login.html
@@ -39,7 +39,7 @@
 <body class="">
     <link href="./static/1.css" rel="stylesheet" />
     <h1 style="font-family:arial;color:rgb(55, 134, 214);font-size:16px;"> <br><br><br><br><br><center> Welcome to CjS-ChatGPTbot ! </center></h1>
-    <p style="font-family:arial;color:rgb(87, 85, 90);font-size:16px;"><center>--by Cj Stephen Zhou <a style="font-family:arial;color:rgba(9, 31, 225, 0.851);font-size:12px;">cjszhou@outlook.com</a></center></p>
+    <h2 style="font-family:arial;color:rgb(90, 89, 94);font-size:12px;"><center>         --by Cj Stephen Zhou <a style="font-family:arial;color:rgba(9, 31, 225, 0.851);font-size:12px;">cjszhou@outlook.com</a></center></h2>
     <form name="login" class="login-form" action="./login" method="post" autocomplete="off">
         <input type="password" name="password" placeholder="Password" style="border: none; height: 25px;width: 250px;"
             required>
