--- a/channel/http/templates/login.html
+++ b/channel/http/templates/login.html
@@ -44,7 +44,8 @@
         <input type="password" name="password" placeholder="Password" style="border: none; height: 25px;width: 250px;"
             required>
         </input>
-        <input type="submit" class="Button" value="登录" />
+        <input type="submit" class="Button" value="Login 登录" />
+        <p style="font-family:arial;color:rgb(92, 93, 94);font-size:7px;">*Email to cjszhou@outook.com to request password  </p>
         <span style="color:red">
             <p id="err"></p>
         </span>
