show the password

--- a/channel/http/templates/login.html
+++ b/channel/http/templates/login.html
@@ -45,7 +45,7 @@
             required>
         </input>
         <input type="submit" class="Button" value="Login 登录" />
-        <p style="font-family:arial;color:rgb(92, 93, 94);font-size:7px;">*Email to cjszhou@outook.com to request password  </p>
+        <p style="font-family:arial;color:rgb(92, 93, 94);font-size:7px;">*Password is the number of "OneTwoTree"  </p>
         <span style="color:red">
             <p id="err"></p>
         </span>
