modify the text

--- a/channel/http/templates/login.html
+++ b/channel/http/templates/login.html
@@ -44,8 +44,9 @@
         <input type="password" name="password" placeholder="Password" style="border: none; height: 25px;width: 250px;"
             required>
         </input>
-        <input type="submit" class="Button" value="Login 登录" />
-        <p style="font-family:arial;color:rgb(92, 93, 94);font-size:7px;">*Password is the number of "OneTwoTree"  </p>
+        <input type="submit" class="Button" value="Login" />
+        <p></p>
+        <p style="font-family:arial;color:rgb(92, 93, 94);font-size:1px;">*Note: Password is the number of "OneTwoThree"  </p>
         <span style="color:red">
             <p id="err"></p>
         </span>
