--- a/channel/http/templates/index.html
+++ b/channel/http/templates/index.html
@@ -6,15 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- Title -->
     <title>CjS-ChatGPTbot</title><!-- Bootstrap Css -->
+    <link rel="icon" href="{{ url_for('static', filename='cjs.ico') }}">
     <link href="./static/1.css" rel="stylesheet" />
     <style>
         button {
             font-family: 'Microsoft YaHei';
         }
     </style>
+    {% if selectedmodel %}
+    <p style="font-family:arial;color:rgb(87, 85, 90);font-size:14px;">Current GPT Model: <a style="font-family:arial;color:rgba(9, 31, 225, 0.851);font-size:15px;">{{ selectedmodel }}</a></p>
+    {% endif %}
 </head>
 
 <body class="">
+    <form action="/process_model" method="POST">
+        <select id="modelDropdown" name="model" placeholder="Select a model">
+            <option value="gpt-3.5-turbo" {% if selectedmodel == 'gpt-3.5-turbo' %}selected{% endif %}>gpt-3.5-turbo</option>
+            <option value="gpt-4" {% if selectedmodel == 'gpt-4' %}selected{% endif %}>gpt-4</option>
+            <!-- <option value="davanci" {% if selectedmodel == 'davinci' %}selected{% endif %}>davanci</option> -->
+        </select>
+        <button type="submit">Switch GPT Model</button>
+    </form>
+    
+      <div id="selectedModelDiv"></div>
+    
+      <script>
+        $(document).ready(function() {
+          $('#modelDropdown').select2({
+            placeholder: 'Select a model'
+          });
+    
+          // 当选择项发生变化时执行的回调函数
+          $('#modelDropdown').on('change', function(e) {
+            e.preventDefault(); // 阻止表单的默认提交行为
+    
+            var selectedModel = $(this).val();
+    
+            $.ajax({
+              url: '/process_model',
+              type: 'POST',
+              data: {model: selectedModel},
+              success: function(response) {
+                console.log('Received response:', response);
+                // 在页面上显示选项值
+                $('#selectedModelDiv').text(response);
+    
+                // 刷新页面
+                location.reload();
+              },
+              error: function(error) {
+                console.log('Error:', error);
+              }
+            });
+          });
+        });
+        </script>
+    
     <div class="no-border">
         <div id="chat" class="conv-form-wrapper">
         </div>
