--- a/channel/http/templates/login.html
+++ b/channel/http/templates/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- Title -->
     <title>Login-CjS-ChatGPTbot</title><!-- Bootstrap Css -->
+    <link rel="icon" href="{{ url_for('static', filename='cjs.ico') }}">
     <style>
         .login-form {
             box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.5);
