--- a/channel/http/templates/index.html
+++ b/channel/http/templates/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="">
-    <form action="/process_model" method="POST">
+    <form action="/bot1/process_model" method="POST">
         <select id="modelDropdown" name="model" placeholder="Select a model">
             <option value="gpt-3.5-turbo" {% if selectedmodel == 'gpt-3.5-turbo' %}selected{% endif %}>gpt-3.5-turbo</option>
             <option value="gpt-4" {% if selectedmodel == 'gpt-4' %}selected{% endif %}>gpt-4</option>
@@ -36,31 +36,31 @@
             placeholder: 'Select a model'
           });
     
-          // 当选择项发生变化时执行的回调函数
-          $('#modelDropdown').on('change', function(e) {
-            e.preventDefault(); // 阻止表单的默认提交行为
+        //   // 当选择项发生变化时执行的回调函数
+        //   $('#modelDropdown').on('change', function(e) {
+        //     e.preventDefault(); // 阻止表单的默认提交行为
     
-            var selectedModel = $(this).val();
+        //     var selectedModel = $(this).val();
     
-            $.ajax({
-              url: '/process_model',
-              type: 'POST',
-              data: {model: selectedModel},
-              success: function(response) {
-                console.log('Received response:', response);
-                // 在页面上显示选项值
-                $('#selectedModelDiv').text(response);
+        //     $.ajax({
+        //       url: '/process_model',
+        //       type: 'POST',
+        //       data: {model: selectedModel},
+        //       success: function(response) {
+        //         console.log('Received response:', response);
+        //         // 在页面上显示选项值
+        //         $('#selectedModelDiv').text(response);
     
-                // 刷新页面
-                location.reload();
-              },
-              error: function(error) {
-                console.log('Error:', error);
-              }
-            });
-          });
-        });
-        </script>
+        //         // 刷新页面
+        //         location.reload();
+        //       },
+        //       error: function(error) {
+        //         console.log('Error:', error);
+        //       }
+        //     });
+        //   });
+        // });
+        // </script>
     
     <div class="no-border">
         <div id="chat" class="conv-form-wrapper">
