remove invalid JS codes. Mark as v2.0

--- a/channel/http/templates/index.html
+++ b/channel/http/templates/index.html
@@ -30,7 +30,7 @@
     
       <div id="selectedModelDiv"></div>
     
-      <script>
+      <!-- <script>
         $(document).ready(function() {
           $('#modelDropdown').select2({
             placeholder: 'Select a model'
@@ -60,7 +60,7 @@
             });
           });
         });
-        </script>
+        </script> -->
     
     <div class="no-border">
         <div id="chat" class="conv-form-wrapper">
@@ -203,7 +203,7 @@
             var b = a("#chat").convform()
         });
     </script>
-    <p style="font-family:arial;color:rgb(87, 85, 90);font-size:12px;">CjS-ChatGPTbot-Ver1.0
+    <p style="font-family:arial;color:rgb(87, 85, 90);font-size:12px;">CjS-ChatGPTbot-Ver2.0
     <br>--by Cj Stephen Zhou <a style="font-family:arial;color:rgba(9, 31, 225, 0.851);font-size:12px;">cjszhou@outlook.com</a>
     </p>
 </body>
