move refresh topic button to bottom

--- a/channel/http/templates/index.html
+++ b/channel/http/templates/index.html
@@ -21,7 +21,6 @@
     <a href="http://52.185.188.130/" style="font-family:arial;color:rgba(83, 84, 90, 0.851);font-size:17px;">Home</a>
     <p>
     <p>
-    <a href="/"> Refresh Bot1</a>
 </head>
 
 <body class="">
@@ -212,6 +211,9 @@
             var b = a("#chat").convform()
         });
     </script>
+    <a href="/">🔄</a> <a href="/" style="font-family:arial;color:rgb(87, 85, 90);font-size:12px;">Refresh topic</a>
+    <p></p>
+    <p></p>
     <p style="font-family:arial;color:rgb(87, 85, 90);font-size:12px;">CjS-ChatGPTbot-Ver2.0
     <br>--by Cj Stephen Zhou <a style="font-family:arial;color:rgba(9, 31, 225, 0.851);font-size:12px;">cjszhou@outlook.com</a>
     </p>
